Worked on the second step which is creating a theme

--- a/tlm-source/_posts/2013-08-17-sm-post1.md
+++ b/tlm-source/_posts/2013-08-17-sm-post1.md
@@ -19,7 +19,7 @@ image:
 </div>
 </section><!-- /#table-of-contents -->
 
-Below is just about everything I needed  to know about building your very own website. It is easy to build and if you use github then it will be even easier to maintain.
+Below is just about everything you need to know about building your very own website. It is easy to build and if you use github then it will be even easier to maintain. But as with everything else if you want to dig in deeper and understand how this all works then you will need to devote more time.
 
 Before I start I must thank [Michael Rose][michael-rose] for providing this awesome theme for my blog. Check out his github template.
 
@@ -27,7 +27,7 @@ Before I start I must thank [Michael Rose][michael-rose] for providing this awes
 First of Jekyll is the engine behind GitHub web pages. It is a Ruby script used to generate static HTML websites from source text and themes. HTML is generated before being deployed to the web server therefore it is a static website which can be make your website extremely fast and secure. 
 
 ### Why use Jekyll? 
-There are a number of popular blogging platforms available today. However if you want to host your own website you will need to know all the performance tweaks and optimizations otherwise these hosted platforms can easily bring down your server. You will also find a number of popular third party firms that specializes in blog hosting services such as WPEngine and Wordpress.com
+There are a number of popular blogging platforms available today. However if you want to host your own website you will need to know all the performance tweaks and optimizations otherwise these hosted platforms can easily bring down your server. You will also find a number of popular third party firms that specializes in blog hosting services such as WPEngine and Wordpress.com, you are welcome to use them if you so like.
 
 ### A Whirlwind tour of Jekyll
 
@@ -72,11 +72,52 @@ $ jekyll build --watch
 
 Now browse to link *http://localhost:4000*. You should see a working default blog site.
 
-* ##### Step 2 - Choose a Theme for your site
-You can use any theme you like including create your own theme. But if you are like me who would rather spend time doing server side coding then there are a lot of generous folks who have created excellent themes for use.
-I have used Michael Rose's minimal mistakes theme, he also has a newer theme as well. check his themes out. But here are some other alternatives to choose from
+* ##### Step 2 - Choose a theme for your site
+
+You can use any theme you like including create your own theme. But if you are like me who would rather spend time doing server side coding then there are a lot of generous folks who have created excellent themes for us to use. Don't forget to give them a mention in your site.
+
+I have used Michael Rose's minimal mistakes theme, he also has a newer theme as well. check his themes out. But here are some other alternatives to choose from. Here are a few
+
+1. [A List of Jekyll powered sites with source to choose from.][mojombo]
+2. [Jekyll Themes hosts a few themes mostly based on Twitter Bootstrap][jekyllthemes]
+
+You can either fork off from one of the github sites listed and configure it to be your own or download a theme from Jekyll Themes. There are few other options available as well.
+
+If you are very familar with CSS, LESS and Twitter Bootstrap then feel free to create your own theme.
 
 * ##### Step 3 - Configure your site
+Before you can configure your Jekyll generated website, here is how the structure of the site looks like:
+
+{% highlight bash %}
+
+=> All config is done in YAML format
+
+├── _config.yml - contains all configurations parameters for the 
+|                 site
+|
+├── _includes - allows you to add your own custom header,footer 
+|               or any other inserts
+|   ├── footer.html
+|   └── header.html
+|
+├── _layouts - contains all templates that wrap posts 
+|              Layouts are chosen on a post-by-post basis in the 
+|              YAML front matter              
+|   ├── default.html
+|   └── post.html
+|
+├── _posts
+|   ├── 2007-10-29-postname.md
+|   └── 2009-04-26-postname.md
+|
+├── _site
+|
+└── index.html
+
+{% endhighlight %}
+
+If you choose to use themes from github resources listed above then you will only need to change _config.yml file and about.md file. I will be posting more on how to integrate Twitter Bootstrap or create your own custom theme later on, once I have mastered it myself. The configuration parameters are pretty much self explanatory so it should not be an issue. Here is how my _config.yml looks like, now remember I am using a pre-built theme therefore not all themes will have the same parameters.
+
 
 * ##### Step 4 - Start writing your own posts
 
@@ -152,3 +193,5 @@ Make any link standout more when applying the `.btn` class.
 
 [jekyll-site]:    http://jekyllrb.com
 [michael-rose]: http://http://mademistakes.com/about.html
+[mojombo]: https://github.com/mojombo/jekyll/wiki/sites
+[jekyllthemes]: http://jekyllthemes.org/
