added post. modified templates to support multiple authors

--- a/tlm-source/_posts/2013-08-17-sm-post1.md
+++ b/tlm-source/_posts/2013-08-17-sm-post1.md
@@ -5,6 +5,7 @@ description: "Build your own blog site with Jekyll"
 modified: 2013-08-18
 category: articles
 tags: [intro, beginner, jekyll, tutorial]
+authors: [smtechnocrat]
 image:
   feature: texture-feature-05.jpg
 ---
